alerts config by user

--- a/src/main/webapp/script/area/Create.xhtml
+++ b/src/main/webapp/script/area/Create.xhtml
@@ -47,7 +47,7 @@
 
                         <p:toolbar>  
                              <p:toolbarGroup align="right">
-                                 <p:commandButton action="#{areaController.create}" value="#{bundle.CreateAreaSaveLink}" ajax="false" icon="fa fa-save" style="top:4px"/>        
+                                 <p:commandButton action="#{areaController.create}" value="#{bundle.CreateAreaSaveLink}" ajax="false" icon="fa fa-save"/>        
                              </p:toolbarGroup>
                             
                              <p:toolbarGroup align="left">
