--- a/src/main/webapp/script/area/Edit.xhtml
+++ b/src/main/webapp/script/area/Edit.xhtml
@@ -75,7 +75,7 @@
                    </p:toolbarGroup>
                     
                      <p:toolbarGroup align="right">   
-                         <p:commandButton ajax="false" action="#{areaController.update}" value="#{bundle.SaveLink}" icon="fa fa-save" style="top: 4px"/>
+                         <p:commandButton ajax="false" action="#{areaController.update}" value="#{bundle.SaveLink}" icon="fa fa-save" />
 
                    </p:toolbarGroup>
                 </p:toolbar>
