--- a/src/main/webapp/script/area/View.xhtml
+++ b/src/main/webapp/script/area/View.xhtml
@@ -94,7 +94,7 @@
                     </p:toolbarGroup>
 
                     <p:toolbarGroup align="right">   
-                        <p:commandButton ajax="false" action="#{areaController.prepareCreate}" value="#{bundle.createNew}" icon="ui-icon ui-icon-plus"  style="top: 4px"/>
+                        <p:commandButton ajax="false" action="#{areaController.prepareCreate}" value="#{bundle.createNew}" icon="ui-icon ui-icon-plus"  />
 
                     </p:toolbarGroup>
                 </p:toolbar>
