--- a/src/main/webapp/script/cliente/Edit.xhtml
+++ b/src/main/webapp/script/cliente/Edit.xhtml
@@ -144,7 +144,7 @@
                     </p:toolbarGroup>
 
                     <p:toolbarGroup align="right">   
-                        <p:commandButton ajax="false" action="#{clienteController.update}" value="#{bundle.Save}" icon="fa fa-save" style="top:4px"/>
+                        <p:commandButton ajax="false" action="#{clienteController.update}" value="#{bundle.Save}" icon="fa fa-save"/>
                     </p:toolbarGroup>
                 </p:toolbar>
 
