--- a/src/main/webapp/script/cliente/cargarClientes.xhtml
+++ b/src/main/webapp/script/cliente/cargarClientes.xhtml
@@ -68,7 +68,7 @@
                             </p:toolbarGroup>
 
                             <p:toolbarGroup align="right">
-                                <p:commandButton value="Subir Achivo Excel" ajax="false" icon="fa fa-upload" style="top: 4px"
+                                <p:commandButton value="Subir Achivo Excel" ajax="false" icon="fa fa-upload" 
                                                  actionListener="#{emailClienteController.handleFileUpload}"/>     
                             </p:toolbarGroup>
 
