--- a/src/main/webapp/script/grupo/View.xhtml
+++ b/src/main/webapp/script/grupo/View.xhtml
@@ -40,7 +40,7 @@
 
                             <p:toolbarGroup align="right">   
                                 <p:separator/>
-                                <p:commandButton id="showDialogButton" value="#{bundle.destroy}" onclick="PF('confirmation').show()" style="top:4px"
+                                <p:commandButton id="showDialogButton" value="#{bundle.destroy}" onclick="PF('confirmation').show()"
                                                  icon="ui-icon ui-icon-trash" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>         
                             </p:toolbarGroup>
 
