--- a/src/main/webapp/script/producto/Edit.xhtml
+++ b/src/main/webapp/script/producto/Edit.xhtml
@@ -207,7 +207,7 @@
 
                         <p:toolbar>  
                                <p:toolbarGroup align="right">   
-                                   <p:commandButton ajax="false" action="#{productoController.update}" value="#{bundle.Save}" icon="fa fa-save" style="top:4px"/>
+                                   <p:commandButton ajax="false" action="#{productoController.update}" value="#{bundle.Save}" icon="fa fa-save"/>
                                </p:toolbarGroup>
                             
                             <p:toolbarGroup align="left">   
