--- a/src/main/webapp/script/usuario/Edit.xhtml
+++ b/src/main/webapp/script/usuario/Edit.xhtml
@@ -99,7 +99,7 @@
 
                     <p:toolbarGroup align="right">   
                         <p:separator/> 
-                        <p:commandButton ajax="false" action="#{usuarioController.update}" value="#{bundle.EditUsuarioSaveLink}" icon="fa fa-save" style="top:4px"
+                        <p:commandButton ajax="false" action="#{usuarioController.update}" value="#{bundle.EditUsuarioSaveLink}" icon="fa fa-save"
                                          rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>
                     </p:toolbarGroup>
                 </p:toolbar>
