--- a/src/main/webapp/script/cliente/Create.xhtml
+++ b/src/main/webapp/script/cliente/Create.xhtml
@@ -92,7 +92,7 @@
                     </p:toolbarGroup>
 
                     <p:toolbarGroup align="right">   
-                        <p:commandButton ajax="false" action="#{clienteController.create}" value="#{bundle.Save}" icon="fa fa-save" style="top:4px" disabled="#{not clienteController.canCreate}"/>
+                        <p:commandButton ajax="false" action="#{clienteController.create}" value="#{bundle.Save}" icon="fa fa-save" disabled="#{not clienteController.canCreate}"/>
                     </p:toolbarGroup>
                 </p:toolbar>
                 
