--- a/src/main/webapp/script/vista/Edit.xhtml
+++ b/src/main/webapp/script/vista/Edit.xhtml
@@ -35,7 +35,11 @@
 
                      <go:filterView id="panelFilter0" controllerMBean="#{vistaController}"
                                     vista="#{vistaController.selected}"
-                                    filterHelper="#{vistaController.filterHelper2}" showApplyAction="false"
+                                    filterHelper="#{vistaController.filterHelper2}"
+                                    showApplyAction="false"
+                                    showSearchBar="false"
+                                    showEdit="false"
+                                    showSaveAs="false"
                                     update=":mainform:messages :form:panelFilter0:panelFilter :form" vistaControllerBackOutcome="/script/vista/List"/>
 
 
