--- a/src/main/webapp/script/caso/Edit.xhtml
+++ b/src/main/webapp/script/caso/Edit.xhtml
@@ -195,39 +195,17 @@
                 <p:ajax event="tabClose" listener="#{casoScheduleController.onTabClose}" />
 
 
-                <p:tab id="tab-actividades" title="Actividades">
-
+                <p:tab id="tab-actividades" title="Actividades (#{casoController.selected.notaList.size()})">
                     <p:scrollPanel id="scrollpaneActividades" mode="native" style="border: 0;">
-                        <p:panel id="resumenNotas" style="border: 0;">
-                            <p:effect type="highlight" event="load" /> 
-                            <h:panelGrid columns="9" >
-                                <p:graphicImage value="/images/view-pim-notes.png" width="22" height="22"/>
-                                <h:outputText value="Comentarios:"/>
-                                <h:outputText value="#{casoController.cantidadDeNotas}" />
-
-                                <p:graphicImage value="/images/email_out.png" width="22" height="22"/>
-                                <h:outputText value="Respuestas:"/>
-                                <h:outputText value="#{casoController.cantidadDeRespuestasACliente}" />
-
-                                <p:graphicImage value="/images/email_in.png" width="22" height="22"/>
-                                <h:outputText value="Comentarios del solicitante:"/>
-                                <h:outputText value="#{casoController.cantidadDeRespuestasDelCliente}" />
-                            </h:panelGrid>
-                        </p:panel>
-
                         <ui:include src="responder.xhtml" />
-
+                        <br/>
                         <ui:include src="actividadesListForm.xhtml" />
                     </p:scrollPanel>
-
-
-
-
                 </p:tab>
 
 
 
-                <p:tab id="tabAgendarEvento" title="Agenda">
+                <p:tab id="tabAgendarEvento" title="Agenda (#{casoController.selected.scheduleEventList.size()})">
 
                     <p:scrollPanel id="scrollpaneAgenda" mode="native" style="border: 0; height: 500px;">
 
@@ -334,38 +312,22 @@
 
                 </p:tab>
 
-                <p:tab id="tabCasosRelacionados" title="Casos relacionados" >
+                <p:tab id="tabCasosRelacionados" title="Casos relacionados (#{casoController.selected.casosRelacionadosList.size() + casoController.selected.casosHijosList.size() + casoController.selected.idCliente.casoList.size()})" >
                     <p:scrollPanel id="scrollpaneCasosRel" mode="native" style="border: 0; height: 500px;">
+
+                        <go:casoList casosList="#{casoController.selected.idCliente.casoList}" header="Historial de casos del Cliente #{casoController.selected.clientName} (#{casoController.selected.idCliente.casoList.size()})"/>
 
                         <go:casoList casosList="#{casoController.selected.casosRelacionadosList}" header="Casos relacionados (#{casoController.selected.casosRelacionadosList.size()})"/>
 
                         <go:casoList casosList="#{casoController.selected.casosHijosList}" header="Sub casos (#{casoController.selected.casosHijosList.size()})"/>
 
-                        <go:casoList casosList="#{casoController.selected.idCliente.casoList}" header="Historial de casos de #{casoController.selected.clientName}"/>
                     </p:scrollPanel>
                 </p:tab>
 
-                <p:tab id="tab-timeline" title="TimeLine">
+                <p:tab id="tab-timeline" title="Auditoría de eventos">
 
                     <p:scrollPanel id="scrollpaneTimeline" mode="native" style="border: 0; height: 500px;">
-                        <pe:timeline id="timeline" value="#{casoTimelineController.model}" var="audit"  
-                                     editable="false" eventStyle="dot" zoomMax="#{casoTimelineController.zoomMax}"
-                                     zoomMin="60000"
-                                     timeZone="#{casoTimelineController.timeZone}"  
-                                     showButtonNew="false" minHeight="200" widgetVar="timelineWdgt">  
 
-                            <h:panelGrid columns="1" title="#{audit}">  
-                                <h:outputText 
-                                    value="Info: #{(not empty audit.campo and not empty audit.oldValue) ? 
-                                                   audit.campo.concat(' cambió de \'').concat(audit.oldValue).concat('\' a ').concat('\'').concat(audit.newValue).concat('\'')
-                                                   :audit.newValue}"/>  
-                                <h:outputText value="Realizado por: #{audit.idUser} (#{casoController.prettyDate(audit.fecha)})"/>  
-
-                            </h:panelGrid>        
-                        </pe:timeline>  
-
-
-                        <p:separator/>
 
                         <div class="panel no-border panel-dark">
                             <div class="timeline">
@@ -1326,7 +1288,7 @@
 
                     &nbsp;
                     <p:commandButton value="Cerrar" 
-                                      actionListener="#{casoScheduleController.closeViewEvent()}" update=":viewEventForm" process="@this">
+                                     actionListener="#{casoScheduleController.closeViewEvent()}" update=":viewEventForm" process="@this">
                         <p:resetInput target="@form" />
                     </p:commandButton>
 
